keith was whinging to i fixed up the scrollbars etc

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -6,6 +6,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	background: #222;
 	color: #fff;
+	overflow: hidden;
 }
 
 div {
